# zero2prod

./: Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: general.yml
migrations/: 20220402091005_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
